# DA231X-Degree-Project

./: LICENSE
catkin_ws/: .gitignore
catkin_ws/src/odom_listener_spoof/: CMakeLists.txt  package.xml
catkin_ws/src/odom_listener_spoof/launch/: odom_listener_spoof.launch  test.launch
catkin_ws/src/odom_listener_spoof/src/: odom_listener_spoof_node.cpp
catkin_ws/src/ros_dos/: CMakeLists.txt  package.xml
catkin_ws/src/ros_dos/launch/: ros_dos.launch
catkin_ws/src/ros_dos/src/: ros_dos_node.py
catkin_ws/src/sam_dos/: CMakeLists.txt  package.xml
catkin_ws/src/sam_dos/src/: sam_dos_node.py
exploit_scripts/odom_listener_spoof/: README.md  odom_listener_spoof.sh
exploit_scripts/password_cracking/: generate-wordlist.py  scrape.py  wordlist.txt
exploit_scripts/sam_dos/: README.md  sam_dos.sh  sam_dos_node.py
information_gathering/: host_discovery.txt  port_scanning.sh
information_gathering/network/: host_discovery.sh  port_scanning.sh
information_gathering/static-analysis/: README.md  analysis-script.sh  repo-list.txt
information_gathering/static-analysis/output/: auvlib_cppcheck_output.txt  imc_ros_bridge_cppcheck_output.txt  roswasm_suite_cppcheck_output.txt  roswasm_suite_native_cppcheck_output.txt  sbg_ros_driver_cppcheck_output.txt  smarc_navigation_cppcheck_output.txt  smarc_simulations_cppcheck_output.txt  stim300_cppcheck_output.txt  uuv_simulator_cppcheck_output.txt
information_gathering/web/: dirb.sh  dirb_scan.txt
