<?xml version="1.0"?>
<package format="2">
  <name>sam_dos</name>
  <version>0.0.0</version>
  <description>The sam_dos package</description>
  <maintainer email="nvatn@kth.se">Niklas Vatn</maintainer>
  <license>MIT</license>
  <author email="nvatn@kth.se">Niklas Vatn</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
